--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,14 @@
 {
   "presets": [
     "es2015",
-    "react"
+    "react",
+    "stage-0"
+  ],
+  "plugins": [
+    "syntax-object-rest-spread",
+    "transform-decorators-legacy"
+  ],
+  "ignore": [
+    "/src/client/public/javascripts/*.js"
   ]
 }
