--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.22.0",
     "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
     "copyfiles": "^0.2.1",
@@ -66,7 +70,9 @@
     "react": "^15.0.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.0",
+    "react-redux": "^4.0.0",
     "react-router": "^2.4.0",
+    "immutable": "3.8.1",
     "superagent": "^2.0.0-alpha.3"
   }
 }
